addmovの環境構築（バナー表示はまだで、Google AdMobのインストールとエラー対応）
エラー対応が大変だったので、readme.txtにエラーコードと対策を記録